	* optimized disk cache to work with large caches
	* support variable number of optimistic unchoke slots and to dynamically
	  adjust based on the total number of unchoke slots
	* support for BitTyrant choker algorithm
	* support for automatically start torrents when they receive an
	  incoming connection
	* added more detailed instrumentation of the disk I/O thread


	* changed default choker behavior to use 8 unchoke slots (instead of being rate based)
	* fixed error reporting issue in disk I/O thread
	* fixed file allocation issues on linux
	* fixed filename encoding and decoding issue on platforms using iconv
	* reports redundant downloads to tracker, fixed downloaded calculation to
	  be more stable when not including redundant. Improved redundant data accounting
	  to be more accurate
	* fixed bugs in http seed connection and added unit test for it
	* fixed error reporting when fallocate fails
	* deprecate support for separate proxies for separate kinds of connections

0.15.4 release

	* fixed piece picker issue triggered by hash failure and timed out requests to the piece
	* fixed optimistic unchoke issue when setting per torrent unchoke limits
	* fixed UPnP shutdown issue
	* fixed UPnP DeletePortmapping issue
	* fixed NAT-PMP issue when adding the same mapping multiple times
	* no peers from tracker when stopping is no longer an error
	* improved web seed retry behavior
	* fixed announce issue

0.15.3 release

	* fixed announce bug where event=completed would not be sent if it violated the
	  min-announce of the tracker
	* fixed limitation in rate limiter
	* fixed build error with boost 1.44

0.15.2 release

	* updated compiler to msvc 2008 for python binding
	* restored default fail_limit to unlimited on all trackers
	* fixed rate limit bug for DHT
	* fixed SOCKS5 bug for routing UDP packets
	* fixed bug on windows when verifying resume data for a torrent where
	  one of its directories had been removed
	* fixed race condition in peer-list with DHT